[project]
name = "greenalphapredictor"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmet Çağatay Savaşlı",email = "cagatay.savasli@ozu.edu.tr"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "yesg (>=2.1.1,<3.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
